[tool.poetry]
name = "trendingtopics"
version = "0.1.0"
description = "A package that produces a trend for both demanded (search trends) and supplied (google news) topics at any given keyword(s) as input"
authors = ["Ega Kurnia Yazid"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10.6"
pandas = "^1.5.2"
matplotlib = "^3.6.2"
pytrends = "^4.8.0"
requests = "^2.28.1"
python-dotenv = "^0.21.0"
newsapi-python = "^0.2.6"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.17.1"
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
